--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -5,26 +5,23 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-scan:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: 1. SCA Scan (Trivy - Filesystem)
-        uses: aquasecurity/trivy-action@master
+      - name: 1. Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'table'
-          severity: 'CRITICAL,HIGH'
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 2. Build Docker Image
-        run: docker build -t myapp:${{ github.sha }} .
+      - name: 2. Build and Scan Image (Trivy)
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/myapp:v1 .
+          # รัน Scan ก่อน Push
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ secrets.DOCKERHUB_USERNAME }}/myapp:v1
 
-      - name: 3. Container Image Scan (Trivy)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'myapp:${{ github.sha }}'
-          format: 'table'
-          severity: 'CRITICAL,HIGH'
+      - name: 3. Push Tagged Image to Registry
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:v1
