--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -2,11 +2,12 @@ name: DevSecOps CI Pipeline
 
 on:
   push:
-    branches: ["main"]
+    branches: 
+       - Lab2
 
 jobs:
   build-and-push:
-    runs-on: self-hosted
+    runs-on: Github
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -22,6 +23,6 @@ jobs:
       - name: Run new container
         run: |
           docker run -d \
-            -p 8080:8080 \
+            -p 3000:3000 \
             --name node-remote-test \
             node-remote-test
