--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -7,22 +7,32 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: Github
+    runs-on: ubuntu-latest
     steps:
+      # 1. Checkout
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Build Docker image
-        run: docker build -t node-remote-test . 
+      # 2. Code Scan with SonarQube: ตรวจสอบคุณภาพโค้ด
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      - name: Stop and remove existing container
-        run: |
-          docker stop node-remote-test || true
-          docker rm node-remote-test || true
+       # 3. Login to Docker Hub: เตรียมตัวสำหรับการ Push image
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Run new container
-        run: |
-          docker run -d \
-            -p 3000:3000 \
-            --name node-remote-test \
-            node-remote-test
+      # 4. Build Docker Image & Push to Registry
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
